--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,8 @@
     "qjsonvalue": "cpp",
     "qjsondocument": "cpp",
     "qsqlrecord": "cpp",
-    "qjsonarray": "cpp"
+    "qjsonarray": "cpp",
+    "qsharedpointer": "cpp",
+    "qpointer": "cpp"
   }
 }
