--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,6 +102,7 @@
     "qsqlrecord": "cpp",
     "qjsonarray": "cpp",
     "qsharedpointer": "cpp",
-    "qpointer": "cpp"
+    "qpointer": "cpp",
+    "qsettings": "cpp"
   }
 }
