--- a/Config/Config.Static.ini
+++ b/Config/Config.Static.ini
@@ -6,3 +6,5 @@ DBName=AlSultan_S1
 DBUser=postgres
 DBPassword=root
 DBPort=5432
+[Global]
+StaticFilesPath=D:/Mustapha/XGame/AlsultanServer/Static/
